SERVER-43330 Remove ReplicationStateTransitionLockGuard move constructor