src/mongo/db/concurrency/replication_state_transition_lock_guard.h
@@ -63,7 +63,7 @@ public:
      */
     ReplicationStateTransitionLockGuard(OperationContext* opCtx, LockMode mode, EnqueueOnly);
 
-    ReplicationStateTransitionLockGuard(ReplicationStateTransitionLockGuard&&);
+    ReplicationStateTransitionLockGuard(ReplicationStateTransitionLockGuard&&) = delete;
     ReplicationStateTransitionLockGuard& operator=(ReplicationStateTransitionLockGuard&&) = delete;
 
     ~ReplicationStateTransitionLockGuard();
